# ltnexp03

./: .gitignore  ABSTRACTION_CONSISTENCY_REVIEW.md  ABSTRACTION_GAP_CLOSURE_PLAN.md  ABSTRACTION_WORKFLOW_GUIDELINES.md  COMPREHENSIVE_TUTORIAL.md  DBC_GAP_ANALYSIS_AND_RECOMMENDATIONS.md  DESIGN_RECOMMENDATIONS.md  DESIGN_UPDATE_SUMMARY.md  Dockerfile  FINAL_PROJECT_STATUS_REPORT.md  FIXED_IMPORTS.md  Makefile  PERSISTENCE_IMPLEMENTATION_STATUS.md  PERSISTENCE_LAYER_FINAL_STATUS.md  PHASE1_COMPLETE.md  PHASE_3A_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_DOCUMENTATION_SUMMARY.md  README.md  demo_abstractions.py  demo_comprehensive_system.py  demo_enhanced_system.py  demo_persistence_layer.py  demo_phase4_neural_symbolic.py  demo_service_layer.py  dryrun.txt  environment.yml  explore_abstractions.py  final_mypy_status.md  kill8163  ltn01.py  mypy.ini  mypy_fix_checklist.md  persistence_examples_overview.py  project_completion_report.md  pyproject.toml  smt01.py  test_to_log.sh  tmp.txt
app/: __init__.py  batch_service.py  main.py  service_layer.py  working_service_layer.py
app/core/: __init__.py  abstractions.py  api_models.py  batch_persistence.py  concept_registry.py  contract_compatibility.py  contract_enhanced_registry.py  contract_persistence.py  contracts.py  enhanced_semantic_reasoning.py  frame_cluster_abstractions.py  frame_cluster_registry.py  hybrid_registry.py  icontract_demo.py  (+8 more)
demo/: demo_comprehensive_system.py  demo_hybrid_system.py  demo_phase4_neural_symbolic.py  demo_production_readiness.py  demo_service_layer.py
embeddings_cache/: embeddings.npy  metadata.json
examples/: basic_analogy.yaml  core_axioms.json  multi_format_persistence_example.py  persistence_examples_overview.py  persistence_strategy_example.py
original_code/: framenet01.py  notears.py  notears02.py  notears03.py
prior_llm_docs/: ABSTRACTION_CONSISTENCY_REVIEW.md  ABSTRACTION_WORKFLOW_GUIDELINES.md  DBC_GAP_ANALYSIS_AND_RECOMMENDATIONS.md  FINAL_MYPY_PROGRESS_REPORT.md  FRAMENET_CLUSTERING_DESIGN.md  HYBRID_FRAMENET_CLUSTER_APPROACH.md  ICONTRACT_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LITERATE_PROGRAMMING_COMPLETE.md  MYPY_PROGRESS_UPDATE.md  PERSISTENCE_LAYER_STRATEGY.md  PHASE_3A_COMPLETE.md  PHASE_3B_IMPLEMENTATION_GUIDE.md  PHASE_3C_COMPLETE.md  PHASE_3C_STATUS.md  PHASE_4_TESTING_STATUS.md  TYPE_CHECKING_COMPLETION_REPORT.md  mypy_completion_report.md  mypy_fix_checklist.md  mypy_fix_checklist_updated.md  mypy_issues.txt  mypy_progress_update.md  testouput.txt
scripts/: kill8321  killport.sh  start-aider.sh
tests/: README_PHASE_4.md  __init__.py  conftest.py  test_comprehensive_service_layer.py  test_main.py  test_neural_symbolic.py  test_phase_3a.py  test_phase_4_neural_symbolic.py  test_service_layer.py  test_service_layer_integration.py  test_simple_service_layer.py  test_working_service_layer.py
(+19 files in other folders)
